err/collective.newrelic.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/collective'...
Listing './lib/python3.5/site-packages/collective/newrelic'...
Compiling './lib/python3.5/site-packages/collective/newrelic/hooks.py'...
***   File "./lib/python3.5/site-packages/collective/newrelic/hooks.py", line 50
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/collective/newrelic/patches'...
Compiling './lib/python3.5/site-packages/collective/newrelic/patches/cron4plone.py'...
***   File "./lib/python3.5/site-packages/collective/newrelic/patches/cron4plone.py", line 7
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/collective/newrelic/patches/transformchains.py'...
***   File "./lib/python3.5/site-packages/collective/newrelic/patches/transformchains.py", line 53
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/collective/newrelic/transforms'...
Listing './lib/python3.5/site-packages/collective.newrelic-1.0.9.egg-info'...
Listing './lib/python3.5/site-packages/future'...
Listing './lib/python3.5/site-packages/future/backports'...
Listing './lib/python3.5/site-packages/future/backports/email'...
Listing './lib/python3.5/site-packages/future/backports/email/mime'...
Listing './lib/python3.5/site-packages/future/backports/html'...
Listing './lib/python3.5/site-packages/future/backports/http'...
Listing './lib/python3.5/site-packages/future/backports/test'...
Listing './lib/python3.5/site-packages/future/backports/urllib'...
Listing './lib/python3.5/site-packages/future/backports/xmlrpc'...
Listing './lib/python3.5/site-packages/future/builtins'...
Listing './lib/python3.5/site-packages/future/moves'...
Listing './lib/python3.5/site-packages/future/moves/dbm'...
Listing './lib/python3.5/site-packages/future/moves/html'...
Listing './lib/python3.5/site-packages/future/moves/http'...
Listing './lib/python3.5/site-packages/future/moves/test'...
Listing './lib/python3.5/site-packages/future/moves/tkinter'...
Listing './lib/python3.5/site-packages/future/moves/urllib'...
Listing './lib/python3.5/site-packages/future/moves/xmlrpc'...
Listing './lib/python3.5/site-packages/future/standard_library'...
Listing './lib/python3.5/site-packages/future/tests'...
Listing './lib/python3.5/site-packages/future/types'...
Listing './lib/python3.5/site-packages/future/utils'...
Listing './lib/python3.5/site-packages/future-0.16.0.egg-info'...
Listing './lib/python3.5/site-packages/libfuturize'...
Listing './lib/python3.5/site-packages/libfuturize/fixes'...
Listing './lib/python3.5/site-packages/libpasteurize'...
Listing './lib/python3.5/site-packages/libpasteurize/fixes'...
Listing './lib/python3.5/site-packages/lxml'...
Listing './lib/python3.5/site-packages/lxml/html'...
Listing './lib/python3.5/site-packages/lxml/includes'...
Listing './lib/python3.5/site-packages/lxml/includes/libexslt'...
Listing './lib/python3.5/site-packages/lxml/includes/libxml'...
Listing './lib/python3.5/site-packages/lxml/includes/libxslt'...
Listing './lib/python3.5/site-packages/lxml/isoschematron'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/rng'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl/iso-schematron-xslt1'...
Listing './lib/python3.5/site-packages/lxml-4.1.1.dist-info'...
Listing './lib/python3.5/site-packages/newrelic'...
Listing './lib/python3.5/site-packages/newrelic/admin'...
Listing './lib/python3.5/site-packages/newrelic/api'...
Listing './lib/python3.5/site-packages/newrelic/bootstrap'...
Listing './lib/python3.5/site-packages/newrelic/common'...
Listing './lib/python3.5/site-packages/newrelic/core'...
Listing './lib/python3.5/site-packages/newrelic/extras'...
Listing './lib/python3.5/site-packages/newrelic/extras/framework_django'...
Listing './lib/python3.5/site-packages/newrelic/extras/framework_django/templatetags'...
Listing './lib/python3.5/site-packages/newrelic/hooks'...
Listing './lib/python3.5/site-packages/newrelic/hooks/framework_tornado'...
Listing './lib/python3.5/site-packages/newrelic/hooks/framework_tornado_r3'...
Listing './lib/python3.5/site-packages/newrelic/hooks/framework_tornado_r4'...
Listing './lib/python3.5/site-packages/newrelic/network'...
Listing './lib/python3.5/site-packages/newrelic/packages'...
Listing './lib/python3.5/site-packages/newrelic/packages/requests'...
Listing './lib/python3.5/site-packages/newrelic/packages/requests/packages'...
Listing './lib/python3.5/site-packages/newrelic/packages/requests/packages/chardet'...
Listing './lib/python3.5/site-packages/newrelic/packages/requests/packages/urllib3'...
Listing './lib/python3.5/site-packages/newrelic/packages/requests/packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/newrelic/packages/requests/packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/newrelic/packages/requests/packages/urllib3/util'...
Listing './lib/python3.5/site-packages/newrelic/packages/wrapt'...
Listing './lib/python3.5/site-packages/newrelic/samplers'...
Listing './lib/python3.5/site-packages/newrelic-2.100.0.84.egg-info'...
Listing './lib/python3.5/site-packages/past'...
Listing './lib/python3.5/site-packages/past/builtins'...
Listing './lib/python3.5/site-packages/past/tests'...
Listing './lib/python3.5/site-packages/past/translation'...
Listing './lib/python3.5/site-packages/past/types'...
Listing './lib/python3.5/site-packages/past/utils'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/repoze'...
Listing './lib/python3.5/site-packages/repoze/xmliter'...
Listing './lib/python3.5/site-packages/repoze.xmliter-0.6.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
